剧目管理crud
