# docs/swagger.json
@@ -48,6 +48,159 @@
                 }
             }
         },
+        "/play": {
+            "get": {
+                "description": "获得所有剧目",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "剧目管理"
+                ],
+                "summary": "获得所有剧目",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ResponseData"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "更新剧目",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "剧目管理"
+                ],
+                "summary": "更新剧目",
+                "parameters": [
+                    {
+                        "description": "剧目更新信息",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PlayUpdateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ResponseData"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "添加剧目",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "剧目管理"
+                ],
+                "summary": "添加剧目",
+                "parameters": [
+                    {
+                        "description": "剧目信息",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PlayInsertReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/play/{play_id}": {
+            "get": {
+                "description": "获得特定剧目",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "剧目管理"
+                ],
+                "summary": "获得特定剧目",
+                "parameters": [
+                    {
+                        "description": "剧目id",
+                        "name": "play_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ResponseData"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "删除剧目",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "剧目管理"
+                ],
+                "summary": "删除剧目",
+                "parameters": [
+                    {
+                        "description": "剧目id",
+                        "name": "play_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/signup": {
             "post": {
                 "description": "注册接口",
@@ -101,6 +254,81 @@
         }
     },
     "definitions": {
+        "dto.PlayInsertReq": {
+            "type": "object",
+            "required": [
+                "play_description",
+                "play_end_time",
+                "play_name",
+                "play_price",
+                "play_start_time"
+            ],
+            "properties": {
+                "play_description": {
+                    "type": "string"
+                },
+                "play_end_time": {
+                    "type": "string"
+                },
+                "play_name": {
+                    "type": "string"
+                },
+                "play_price": {
+                    "type": "number"
+                },
+                "play_start_time": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PlayStatu": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2
+            ],
+            "x-enum-varnames": [
+                "PlayStatusBefore",
+                "PlayStatusDuring",
+                "PlayStatusAfter"
+            ]
+        },
+        "dto.PlayUpdateReq": {
+            "type": "object",
+            "required": [
+                "play_description",
+                "play_end_time",
+                "play_id",
+                "play_name",
+                "play_price",
+                "play_start_time",
+                "play_statu"
+            ],
+            "properties": {
+                "play_description": {
+                    "type": "string"
+                },
+                "play_end_time": {
+                    "type": "string"
+                },
+                "play_id": {
+                    "type": "integer"
+                },
+                "play_name": {
+                    "type": "string"
+                },
+                "play_price": {
+                    "type": "number"
+                },
+                "play_start_time": {
+                    "type": "string"
+                },
+                "play_statu": {
+                    "$ref": "#/definitions/dto.PlayStatu"
+                }
+            }
+        },
         "dto.UserLoginReq": {
             "type": "object",
             "required": [
@@ -164,6 +392,7 @@
                 1001,
                 1002,
                 1003,
+                1004,
                 2000,
                 2001,
                 2002
@@ -173,6 +402,7 @@
                 "CodeInvalidParams": "参数错误",
                 "CodeInvalidPassword": "密码错误",
                 "CodeNeedLogin": "需要登录",
+                "CodeNoAuth": "没有权限",
                 "CodeSuccess": "成功",
                 "CodeUserExist": "用户已存在",
                 "CodeUserNotExist": "用户不存在"
@@ -182,6 +412,7 @@
                 "CodeInvalidParams",
                 "CodeError",
                 "CodeNeedLogin",
+                "CodeNoAuth",
                 "CodeUserExist",
                 "CodeUserNotExist",
                 "CodeInvalidPassword"
